bakerydemo/static/css/main.css
/* ... */
.bread-detail__meta ul li {
  border-bottom: 1px solid var(--border-grey);
  list-style: none;
  color: var(--grey);
  max-width: 450px;
  margin-bottom: 15px;
}

.bread-detail__meta-title {
  font-family: var(--font--secondary);
  font-weight: 700;
  font-size: var(--font-md);
  line-height: 1.55;
  margin: 0 0 5px;
}

.bread-detail__meta-content {
  font-family: var(--font--secondary);
  font-size: var(--font-md);
  line-height: 1.55;
  margin: 0 0 20px;
}

.bread-detail__meta-ingredient--draft {
  color: transparent;
  user-select: none;
  cursor: help;
  text-shadow: 0 0 7px rgb(0 0 0 / 50%);
}

@media (min-width: 992px) {
  .bread-detail__meta {
    background-color: var(--cream);
    padding: 240px 60px 60px;
    margin-right: -40px;
    margin-bottom: 0;
  }
}

/* Forms */
.form-page {
  padding-bottom: 60px;
}

.form-page input,
textarea,
select {
  display: block;
  width: 100%;
  padding: 8px;
  border: 1px solid var(--dark);
}

.form-page input[type='submit'] {
  border: none;
  color: var(--white);
  background-color: var(--orange);
  font-weight: 700;
  padding: 15px 25px;
  display: inline-block;
  vertical-align: middle;
  transition-duration: 0.1s;
  width: max-content;
}

.form-page input[type='submit']:hover {
  background-color: var(--dark);
}

.form-page li input[type='checkbox'],
input[type='radio'] {
  display: inline-block;
  margin-right: 10px;
}

.form-page__field ul,
.form-page__field li {
  list-style: none;
  padding: 0;
  margin: 0;
}

.form-page .required {
  color: var(--orange);
}

.form-page .help {
  color: var(--dark);
  font-family: var(--font--secondary);
  font-size: var(--font-sm);
  margin-top: 10px;
  max-width: 350px;
}

.form-page__field {
  color: var(--dark);
  margin-bottom: 30px;
}

.form-page__field label {
  margin-bottom: 10px;
}

.form-page__help-text {
  color: var(--grey);
  font-family: var(--font--secondary);
  font-size: var(--font-md);
  line-height: 28px;
  margin: -10px 0 10px;
}

@media (min-width: 766px) {
  .form-page input,
  textarea,
  select {
    width: 100%;
  }

  .form-page {
    padding-bottom: 140px;
  }

  .form-page__field {
    margin-bottom: 50px;
  }
}

/* Generic title image header include */
.base-header img {
  height: auto;
  margin-top: 20px;
  max-width: 100%;
  width: auto;
}

@media (max-width: 970px) {
  .base-header img {
    width: 100%;
  }
}

/* Homepage */

/* #region -- Hero -- */
.homepage .hero {
  margin: 0;
  padding: 200px 0 30px;
}

.homepage .home-hero {
  margin-bottom: 0;
  padding-bottom: 20px;
}

@media (min-width: 768px) {
  .homepage .home-hero {
    padding-bottom: 140px;
  }
}

.homepage .home-hero .lead {
  font-family: var(--font--primary);
  font-weight: 400;
  color: var(--white);
  margin: 40px auto;
  font-size: 1.625rem;
  line-height: 1.15;
}

@media (min-width: 768px) {
  .homepage .home-hero .lead {
    font-size: 2rem;
    line-height: 1.31;
  }
}

.homepage .home-hero .hero-cta-link {
  color: var(--white);
  background-color: var(--orange);
  font-weight: 700;
  padding: 15px 25px;
  display: inline-block;
  vertical-align: middle;
  transition:
    color ease 0.1s,
    background-color ease 0.1s;
}

.homepage .home-hero .hero-cta-link:hover {
  background-color: var(--white);
  color: var(--dark-orange);
}

/* #endregion */

/* #region -- Body -- */
.homepage .streamfield {
  background-color: var(--cream);
}

.homepage .streamfield a {
  color: var(--dark-orange);
}

.homepage .streamfield-column {
  padding: 80px 20px;
}

.homepage .streamfield-column p:first-child {
  color: var(--dark-brown);
  font-family: var(--font--primary);
  font-size: 1.5rem;
  line-height: 1.31;
  margin-bottom: 30px;
}

.homepage .streamfield-column p:first-child a {
  text-decoration-skip-ink: none;
  text-decoration-thickness: 3px;
  text-underline-offset: 4px;
}

.homepage .streamfield-column p {
  font-size: 0.875rem;
  line-height: 1.57;
}

.homepage .streamfield-column p:last-child {
  margin-bottom: 0;
}

@media (min-width: 768px) {
  .homepage .streamfield-column p {
    font-size: var(--font-md);
    line-height: 1.55;
  }
}

@media (min-width: 992px) {
  .homepage .streamfield-column {
    padding: 140px 0;
  }

  .homepage .streamfield-column p:first-child {
    font-size: 3.75rem;
    line-height: 1.07;
    margin-bottom: 60px;
  }
}

/* #endregion */

/* #region -- Promo Section */
.homepage .promo-row {
  padding: 40px 0 80px;
}

@media (min-width: 768px) {
  .homepage .promo-row {
    padding-top: 80px;
    margin-right: -45px;
  }
}

.homepage .promo h2 {
  margin-top: 0;
  margin-bottom: 20px;
  color: var(--white);
}

.homepage .promo p,
.homepage .promo li {
  color: var(--white);
}

.homepage .promo a {
  color: var(--white);
  text-decoration: underline;
}

.homepage .promo {
  background: var(--light-brown);
  height: 100%;
  padding: 60px 40px;
  margin-top: 40px;
  margin-bottom: 100px;
}

.homepage .promo-text {
  padding: 0;
}

.homepage .promo figure img {
  margin: 40px 0 -200px;
  width: 100%;
  height: auto;
}

@media (min-width: 768px) {
  .homepage .promo {
    margin-top: -180px;
    margin-right: -120px;
    padding: 180px 60px 40px;
  }

  .homepage .promo figure img {
    width: calc(100% + 60px);
    height: auto;
    margin-right: -60px;
    margin-bottom: -280px;
    padding-top: 20px;
  }

  .homepage .promo p {
    font-size: 1.25rem;
    line-height: 1.35;
  }
}

/* #endregion */

/* #region -- Featured Cards Section -- */
.homepage .featured-cards__list {
  list-style: none;
  padding-left: 0;
}

.homepage .featured-cards__title {
  margin-top: 0;
  margin-bottom: 40px;
}

.homepage .featured-cards__link {
  display: flex;
  flex-direction: row;
  font-family: var(--font--primary);
  margin: 0 auto;
  width: max-content;
  font-size: var(--font-md);
  line-height: 1.28;
}

.homepage .featured-cards__chevron-icon {
  margin-left: 8px;
  width: 8px;
  height: 22px;
  transition: transform ease 0.1s;
}
/* ... */

